style.css
:root{
    --maincolor: rgb(182, 58, 58);
    
}
*{
    margin: 0px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}
body{
    background-image: url(img/pngtree-nature-forest-sun-ecology-image_2256183.jpg);
    background-size: cover;

}
main{
    margin: auto;
    margin-bottom: 0px;
    padding: 15px;
    background-color: lightblue;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 1200px;
    gap: 20px;
    

}
main div:first-child{
    display: flex;
}

img{
    max-width: 100%;
    height: auto;
}

#kis{
    display: block;
}
header{
    height: 400px;
    background-image: url(img/kazincbarcika-szines-varos-kirandulas-jegyvasarlas-csonakazo-to11-csodalatosmagyarorszag.jpg);
    margin-bottom: 10px;
    padding: 0px;
    border-bottom: 8px solid;
        border-image: linear-gradient(
        to right,
        red,
        orange,
        yellow,
        green,
        blue,
        indigo,
        violet
    ) 1;
}
h1{
    background-color: aliceblue;
    
}
h2{
    border: 3px double ;
    color: var(--maincolor);
    border-radius: 6px;
}
#head{
    text-align: center;

}
header h2{
    background-color: var(--maincolor);
    color: white;

}
#flexes{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}
table{
    border-collapse: collapse;
    background-color: white;
    
}

td, th{
    border: 1px solid black;
    padding: 8px;
}


p{
    margin: 18px;
    text-align: justify;
    text-indent: 6px;
    line-height: 22px;
    letter-spacing: 2px;
    

}
footer{
    display: flex;
    padding: auto;
    background-color: gray;
    color: white;
    border-top: 3px dotted black;
    
    
}
thead{
    color: blue;
}

